--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    outputs:
+      ECR_URI: ${{ steps.set-ecr-uri.outputs.ECR_URI }}
 
     steps:
       - name: Checkout
@@ -36,11 +38,13 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to ECR
+        id: set-ecr-uri
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           REPO=${{ secrets.ECR_REPOSITORY }}
           ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO"
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
+          echo "::set-output name=ECR_URI::$ECR_URI"
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
             | docker login --username AWS --password-stdin "$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
 
@@ -72,7 +76,9 @@ jobs:
           aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
       - name: Deploy to EKS
+        env:
+          ECR_URI: ${{ needs.build-and-push.outputs.ECR_URI }}
         run: |
-          sed -i "s|REPLACE_WITH_ECR_URI|${{ env.ECR_URI }}|g" k8s/deployment.yaml
+          sed -i "s|REPLACE_WITH_ECR_URI|$ECR_URI|g" k8s/deployment.yaml
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
