--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     outputs:
-      ECR_URI: ${{ steps.set-ecr-uri.outputs.ECR_URI }}
+      ECR_URI: ${{ steps.ecr.outputs.ECR_URI }}
 
     steps:
       - name: Checkout
@@ -37,23 +37,24 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Login to ECR
-        id: set-ecr-uri
+      - name: Login to ECR + Set ECR_URI
+        id: ecr
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          REPO=${{ secrets.ECR_REPOSITORY }}
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO"
+          REPO="${{ secrets.ECR_REPOSITORY }}"
+          REGION="${{ secrets.AWS_REGION }}"
+          ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
+
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
           echo "ECR_URI=$ECR_URI" >> $GITHUB_OUTPUT
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
-            | docker login --username AWS --password-stdin "$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
 
-      - name: Build and push Docker image
+          aws ecr get-login-password --region $REGION \
+            | docker login --username AWS --password-stdin "$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com"
+
+      - name: Build and Push Docker Image
         run: |
           docker build -t $ECR_URI:latest ./app
-          docker tag $ECR_URI:latest $ECR_URI:${{ github.sha }}
           docker push $ECR_URI:latest
-          docker push $ECR_URI:${{ github.sha }}
 
   deploy:
     needs: build-and-push
@@ -73,7 +74,7 @@ jobs:
 
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
+          aws eks update-kubeconfig --name "${{ secrets.EKS_CLUSTER_NAME }}" --region "${{ secrets.AWS_REGION }}"
 
       - name: Deploy to EKS
         env:
