--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,14 +3,13 @@ name: CI/CD
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 permissions:
   contents: read
   id-token: write
 
 jobs:
+
   build-and-push:
     runs-on: ubuntu-latest
     outputs:
@@ -37,24 +36,25 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Login to ECR + Set ECR_URI
+      - name: Login & Set ECR URI
         id: ecr
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          REPO="${{ secrets.ECR_REPOSITORY }}"
-          REGION="${{ secrets.AWS_REGION }}"
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
+          REPO=${{ secrets.ECR_REPOSITORY }}
+          ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO"
 
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
           echo "ECR_URI=$ECR_URI" >> $GITHUB_OUTPUT
 
-          aws ecr get-login-password --region $REGION \
-            | docker login --username AWS --password-stdin "$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com"
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
+            | docker login --username AWS --password-stdin "$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
 
-      - name: Build and Push Docker Image
+      - name: Build and push Docker image
         run: |
           docker build -t $ECR_URI:latest ./app
+          docker tag $ECR_URI:latest $ECR_URI:${{ github.sha }}
           docker push $ECR_URI:latest
+          docker push $ECR_URI:${{ github.sha }}
 
   deploy:
     needs: build-and-push
@@ -74,7 +74,11 @@ jobs:
 
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig --name "${{ secrets.EKS_CLUSTER_NAME }}" --region "${{ secrets.AWS_REGION }}"
+          aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
+
+      - name: Debug ECR URI
+        run: |
+          echo "ECR_URI=${{ needs.build-and-push.outputs.ECR_URI }}"
 
       - name: Deploy to EKS
         env:
