--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     outputs:
-      ECR_URI: ${{ steps.set-ecr-uri.outputs.ECR_URI }}
+      IMAGE_TAG: ${{ steps.set-tag.outputs.IMAGE_TAG }}
 
     steps:
       - name: Checkout
@@ -37,22 +37,23 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Set ECR URI
-        id: set-ecr-uri
+      - name: Login to ECR
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          REPO=${{ secrets.ECR_REPOSITORY }}
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO"
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_OUTPUT
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
-            | docker login --username AWS --password-stdin "$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
+            | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+
+      - name: Set dynamic image tag
+        id: set-tag
+        run: |
+          IMAGE_TAG=${GITHUB_SHA::7}  # أول 7 أحرف من SHA
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ steps.set-ecr-uri.outputs.ECR_URI }}:latest ./app
-          docker tag ${{ steps.set-ecr-uri.outputs.ECR_URI }}:latest ${{ steps.set-ecr-uri.outputs.ECR_URI }}:${{ github.sha }}
-          docker push ${{ steps.set-ecr-uri.outputs.ECR_URI }}:latest
-          docker push ${{ steps.set-ecr-uri.outputs.ECR_URI }}:${{ github.sha }}
+          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}
+          docker build -t $IMAGE_URI:${{ steps.set-tag.outputs.IMAGE_TAG }} ./app
+          docker push $IMAGE_URI:${{ steps.set-tag.outputs.IMAGE_TAG }}
 
   deploy:
     needs: build-and-push
@@ -76,8 +77,8 @@ jobs:
 
       - name: Deploy to EKS
         env:
-          ECR_URI: ${{ needs.build-and-push.outputs.ECR_URI }}
+          IMAGE_TAG: ${{ needs.build-and-push.outputs.IMAGE_TAG }}
         run: |
-          sed -i "s|REPLACE_WITH_ECR_URI|$ECR_URI|g" k8s/deployment.yaml
-          kubectl apply -f k8s/deployment.yaml
-          kubectl apply -f k8s/service.yaml
+          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}
+          kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_URI:$IMAGE_TAG
+          kubectl rollout status deployment/multi-env-app
