--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,10 +14,10 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     outputs:
-      IMAGE_TAG: ${{ steps.set-tag.outputs.IMAGE_TAG }}
+      ECR_URI: ${{ steps.login-ecr.outputs.ECR_URI }}
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -38,22 +38,22 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to ECR
+        id: login-ecr
         run: |
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
-            | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-
-      - name: Set dynamic image tag
-        id: set-tag
-        run: |
-          IMAGE_TAG=${GITHUB_SHA::7}  # أول 7 أحرف من SHA
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          REPO=${{ secrets.ECR_REPOSITORY }}
+          REGION=${{ secrets.AWS_REGION }}
+          ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
+          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
+          echo "ECR_URI=$ECR_URI" >> $GITHUB_OUTPUT
+          aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin "$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com"
 
       - name: Build and push Docker image
         run: |
-          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}
-          docker build -t $IMAGE_URI:${{ steps.set-tag.outputs.IMAGE_TAG }} ./app
-          docker push $IMAGE_URI:${{ steps.set-tag.outputs.IMAGE_TAG }}
+          docker build -t $ECR_URI:latest ./app
+          docker tag $ECR_URI:latest $ECR_URI:${{ github.sha }}
+          docker push $ECR_URI:latest
+          docker push $ECR_URI:${{ github.sha }}
 
   deploy:
     needs: build-and-push
@@ -61,7 +61,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Configure AWS credentials
@@ -77,8 +77,10 @@ jobs:
 
       - name: Deploy to EKS
         env:
-          IMAGE_TAG: ${{ needs.build-and-push.outputs.IMAGE_TAG }}
+          ECR_URI: ${{ needs.build-and-push.outputs.ECR_URI }}
         run: |
-          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}
-          kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_URI:$IMAGE_TAG
+          # استبدال الصورة ديناميكيًا
+          sed -i "s|REPLACE_WITH_ECR_URI|$ECR_URI|g" k8s/deployment.yaml
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
           kubectl rollout status deployment/multi-env-app
