--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         - name: ecr-registry
       containers:
       - name: multi-env-app
-        image: "{{IMAGE_URI}}:{{IMAGE_TAG}}"  # هذا متغير ديناميكي
+        image: REPLACE_WITH_ECR_URI:latest
         env:
         - name: ENVIRONMENT
           value: "dev"
