--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,15 +37,19 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # ------------ FIX 1: Build ECR URI correctly ------------
       - name: Set ECR URI
         id: set-ecr-uri
         run: |
           ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
           REGION=${{ secrets.AWS_REGION }}
           REPO=${{ secrets.ECR_REPOSITORY }}
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_OUTPUT
+          echo "ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO" >> $GITHUB_OUTPUT
+
+      # ------------ FIX 2: Export variable so next steps see it ------------
+      - name: Export ECR_URI
+        run: echo "ECR_URI=${{ steps.set-ecr-uri.outputs.ECR_URI }}" >> $GITHUB_ENV
+
       - name: Login to ECR
         env:
           ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
@@ -57,6 +61,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
+          echo "Using ECR: $ECR_URI"
           docker build -t $ECR_URI:latest ./app
           docker tag $ECR_URI:latest $ECR_URI:${{ github.sha }}
           docker push $ECR_URI:latest
@@ -66,6 +71,9 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+
+    env:
+      ECR_URI: ${{ needs.build-and-push.outputs.ECR_URI }}
 
     steps:
       - name: Checkout
@@ -82,10 +90,8 @@ jobs:
         run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
       - name: Deploy to EKS
-        env:
-          ECR_URI: ${{ needs.build-and-push.outputs.ECR_URI }}
         run: |
-          echo "Replacing image in deployment.yaml with $ECR_URI"
+          echo "Deploying image: $ECR_URI"
           sed -i "s|REPLACE_WITH_ECR_URI|$ECR_URI|g" k8s/deployment.yaml
           kubectl apply -f k8s/deployment.yaml
           kubectl rollout status deployment/multi-env-app
