--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,32 +14,30 @@ spec:
       labels:
         app: multi-env-app
     spec:
-      imagePullSecrets:
-        - name: ecr-registry
       containers:
-      - name: multi-env-app
-        image: REPLACE_WITH_ECR_URI:latest
-        env:
-        - name: ENVIRONMENT
-          value: "dev"
-        ports:
-        - containerPort: 8080
-        resources:
-          requests:
-            cpu: "100m"
-            memory: "64Mi"
-          limits:
-            cpu: "250m"
-            memory: "128Mi"
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 10
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 5
-          periodSeconds: 5
+        - name: multi-env-app
+          image: REPLACE_WITH_ECR_URI:latest
+          ports:
+            - containerPort: 8080
+          env:
+            - name: ENVIRONMENT
+              value: dev
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "100m"
+            limits:
+              memory: "128Mi"
+              cpu: "250m"
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
