--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,8 +13,6 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    outputs:
-      ECR_URI: ${{ steps.set-ecr-uri.outputs.ECR_URI }}
 
     steps:
       - name: Checkout
@@ -38,22 +36,12 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Set ECR URI
-        id: set-ecr-uri
         run: |
           ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
           REGION=${{ secrets.AWS_REGION }}
           REPO=${{ secrets.ECR_REPOSITORY }}
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_OUTPUT
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
-
-      - name: Verify ECR_URI
-        run: |
+          export ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
           echo "ECR_URI=$ECR_URI"
-          if [ -z "$ECR_URI" ]; then
-            echo "ECR_URI is empty! Failing the job."
-            exit 1
-          fi
 
       - name: Login to ECR
         run: |
@@ -62,19 +50,14 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          echo "Using ECR: $ECR_URI"
           docker build -t $ECR_URI:latest ./app
           docker tag $ECR_URI:latest $ECR_URI:${{ github.sha }}
           docker push $ECR_URI:latest
           docker push $ECR_URI:${{ github.sha }}
 
   deploy:
-    needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-
-    env:
-      ECR_URI: ${{ needs.build-and-push.outputs.ECR_URI }}
 
     steps:
       - name: Checkout
@@ -90,17 +73,16 @@ jobs:
       - name: Update kubeconfig
         run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
-      - name: Verify ECR_URI in deploy
+      - name: Set ECR URI
         run: |
+          ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
+          REGION=${{ secrets.AWS_REGION }}
+          REPO=${{ secrets.ECR_REPOSITORY }}
+          export ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
           echo "ECR_URI=$ECR_URI"
-          if [ -z "$ECR_URI" ]; then
-            echo "ECR_URI is empty in deploy job! Failing."
-            exit 1
-          fi
 
       - name: Deploy to EKS
         run: |
-          echo "Deploying image: $ECR_URI"
           sed -i "s|REPLACE_WITH_ECR_URI|$ECR_URI|g" k8s/deployment.yaml
           kubectl apply -f k8s/deployment.yaml
           kubectl rollout status deployment/multi-env-app
