--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,11 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   name: multi-env-app-service
+#spec:
+ # type: LoadBalancer
+  #selector:
+   # app: multi-env-app
+  #ports:
+   # - protocol: TCP
+    #  port: 80
+     # targetPort: 8080
 spec:
-  type: LoadBalancer
-  selector:
-    app: multi-env-app
+  type: NodePort
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 8080
+      nodePort: 31227
