--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,6 +40,10 @@ jobs:
           ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
           REGION=${{ secrets.AWS_REGION }}
           REPO=${{ secrets.ECR_REPOSITORY }}
+          if [ -z "$ACCOUNT_ID" ] || [ -z "$REGION" ] || [ -z "$REPO" ]; then
+            echo "ERROR: Missing secrets!"
+            exit 1
+          fi
           echo "ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO" >> $GITHUB_ENV
           echo "ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
 
@@ -76,9 +80,11 @@ jobs:
 
       - name: Deploy to EKS
         run: |
+          if [ -z "$ECR_URI" ]; then
+            echo "ERROR: ECR_URI is empty!"
+            exit 1
+          fi
           IMAGE_TAG=$ECR_URI:${GITHUB_SHA}
           echo "Deploying image: $IMAGE_TAG"
-          sed -i "s|REPLACE_WITH_ECR_URI|$IMAGE_TAG|g" k8s/deployment.yaml
-          kubectl apply -f k8s/deployment.yaml
+          kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_TAG --record
           kubectl rollout status deployment/multi-env-app
-          kubectl apply -f k8s/service.yaml
