--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,8 +13,6 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    outputs:
-      ecr-uri: ${{ steps.set-ecr.outputs.ecr_uri }}
     
     steps:
       - name: Checkout
@@ -37,8 +35,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Set ECR URI and output
-        id: set-ecr
+      - name: Set ECR URI
         run: |
           ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
           REGION=${{ secrets.AWS_REGION }}
@@ -49,7 +46,6 @@ jobs:
           fi
           ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
           echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
-          echo "ecr_uri=$ECR_URI" >> $GITHUB_OUTPUT
           echo "ECR_URI=$ECR_URI"
 
       - name: Login to ECR
@@ -68,6 +64,8 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+    env:
+      ECR_URI: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}
 
     steps:
       - name: Checkout
@@ -85,7 +83,8 @@ jobs:
 
       - name: Deploy to EKS
         run: |
-          IMAGE_TAG=${{ needs.build-and-push.outputs.ecr-uri }}:${GITHUB_SHA}
+          IMAGE_TAG=${{ env.ECR_URI }}:${GITHUB_SHA}
           echo "Deploying image: $IMAGE_TAG"
-          kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_TAG --record
-          kubectl rollout status deployment/multi-env-app
+          # أزل الـ --record لأنه deprecated
+          kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_TAG
+          kubectl rollout status deployment/multi-env-app --timeout=300s
