--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,17 +36,23 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Set ECR URI
+        id: set-ecr
         run: |
-          ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
-          REGION=${{ secrets.AWS_REGION }}
-          REPO=${{ secrets.ECR_REPOSITORY }}
+          ACCOUNT_ID="${{ secrets.AWS_ACCOUNT_ID }}"
+          REGION="${{ secrets.AWS_REGION }}"
+          REPO="${{ secrets.ECR_REPOSITORY }}"
+          
           if [ -z "$ACCOUNT_ID" ] || [ -z "$REGION" ] || [ -z "$REPO" ]; then
-            echo "ERROR: Missing secrets!"
+            echo "ERROR: Missing required secrets!"
+            echo "ACCOUNT_ID: ${#ACCOUNT_ID} chars"
+            echo "REGION: ${#REGION} chars" 
+            echo "REPO: ${#REPO} chars"
             exit 1
           fi
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO"
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
-          echo "ECR_URI=$ECR_URI"
+          
+          ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO}"
+          echo "ECR_URI=${ECR_URI}" >> $GITHUB_ENV
+          echo "Using ECR URI: ${ECR_URI}"
 
       - name: Login to ECR
         run: |
@@ -55,8 +61,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          IMAGE_TAG=${{ env.ECR_URI }}:${GITHUB_SHA}
-          echo "Using image: $IMAGE_TAG"
+          IMAGE_TAG="${{ env.ECR_URI }}:${GITHUB_SHA}"
+          echo "Building and pushing image: $IMAGE_TAG"
           docker build -t $IMAGE_TAG ./app
           docker push $IMAGE_TAG
 
@@ -64,8 +70,6 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    env:
-      ECR_URI: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}
 
     steps:
       - name: Checkout
@@ -78,13 +82,27 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - name: Debug ECR URI
+        run: |
+          ACCOUNT_ID="${{ secrets.AWS_ACCOUNT_ID }}"
+          REGION="${{ secrets.AWS_REGION }}"
+          REPO="${{ secrets.ECR_REPOSITORY }}"
+          ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO}"
+          echo "ECR_URI=${ECR_URI}"
+          echo "GITHUB_SHA=${GITHUB_SHA}"
+          echo "Full IMAGE_TAG=${ECR_URI}:${GITHUB_SHA}"
+
       - name: Update kubeconfig
         run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
       - name: Deploy to EKS
         run: |
-          IMAGE_TAG=${{ env.ECR_URI }}:${GITHUB_SHA}
+          ACCOUNT_ID="${{ secrets.AWS_ACCOUNT_ID }}"
+          REGION="${{ secrets.AWS_REGION }}"
+          REPO="${{ secrets.ECR_REPOSITORY }}"
+          ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${REPO}"
+          IMAGE_TAG="${ECR_URI}:${GITHUB_SHA}"
+          
           echo "Deploying image: $IMAGE_TAG"
-          # أزل الـ --record لأنه deprecated
-          kubectl set image deployment/multi-env-app multi-env-app=$IMAGE_TAG
+          kubectl set image deployment/multi-env-app multi-env-app="$IMAGE_TAG"
           kubectl rollout status deployment/multi-env-app --timeout=300s
